--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 /****************/
 
 .main {
-	height:auto !important;
-	min-height: 405px;
+	clear: both;
+	overflow: hidden;
 }
 
 .clear {
